# boj-etf-purchase

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: update.yml
data/processed/: boj_etf_reit_amount.csv
src/: aggregator.py  converter.py  downloader.py  visualizer.py
tests/: test_aggregator.py  test_converter.py  test_downloader.py
