[tool.poetry]
name = "boj-etf-purchase"
version = "0.1.0"
description = "The Bank of Japan's ETF and REIT Purchase Amount Dataset"
authors = ["ki-chi <k.brilliant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
xlrd = "^2.0.1"
openpyxl = "^3.0.6"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
autoflake = "^1.4"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
